--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1"
+    "react-hook-form": "^7.52.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
