--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@storybook/addon-links": "^8.2.4",
     "@storybook/addon-onboarding": "^8.2.4",
     "@storybook/blocks": "^8.2.4",
+    "@storybook/manager-api": "^8.2.7",
     "@storybook/react": "^8.2.4",
     "@storybook/react-vite": "^8.2.4",
     "@storybook/test": "^8.2.4",
+    "@storybook/theming": "^8.2.7",
     "@tanstack/eslint-plugin-query": "^5.51.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
