--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - name: Install dependencies
-        run: npm
+        run: npm install
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Build Storybook
