--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "fakerest": "^4.0.1",
     "msw": "^2.3.1",
     "postcss": "^8.4.39",
+    "serve": "^14.2.3",
     "storybook": "^8.2.4",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
