--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -13,7 +13,8 @@ jobs:
         run: npx playwright install --with-deps
       - name: Build Storybook
         run: npm run storybook:build --quiet
-      - name: Serve Storybook
-        run: npm run storybook:serve
-      - name: Run tests
-        run: npx wait-on tcp:3000 && npm run storybook:test
+      - name: Serve Storybook and run tests
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --port 6006 --silent" \
+            "npx wait-on tcp:6006 && npm run storybook:test"
