chore: add serve deps to fix ci

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "storybook:test": "test-storybook"
+    "storybook:test": "test-storybook",
+    "storybook:serve": "http-server storybook-static --port 6006 --silent",
+    "storybook:serve:test": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm run storybook:serve\" \"wait-on tcp:6006 && npm run storybook:test\""
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.5",
@@ -42,18 +44,21 @@
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-storybook": "^0.8.0",
     "fakerest": "^4.0.1",
+    "http-server": "^14.1.1",
     "msw": "^2.3.1",
     "postcss": "^8.4.39",
     "storybook": "^8.2.4",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "wait-on": "^8.0.0"
   },
   "msw": {
     "workerDirectory": [
