--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -14,7 +14,4 @@ jobs:
       - name: Build Storybook
         run: npm run storybook:build --quiet
       - name: Serve Storybook and run tests
-        run: |
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-            "npx http-server storybook-static --port 6006 --silent" \
-            "npx wait-on tcp:6006 && npm run storybook:test"
+        run: npm run storybook:serve:test
