--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "storybook:build": "storybook build",
     "storybook:test": "test-storybook",
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
-    "storybook:serve:test": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm run storybook:serve\" \"wait-on tcp:6006 && npm run storybook:test\""
+    "storybook:serve:test": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm run storybook:serve\" \"npm run storybook:test\""
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.5",
