--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
