--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.26.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "spectacle": "^10.1.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
