feat: add api-platform/admin

--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -6,7 +6,9 @@ api_platform:
         include_type: true
     formats:
         json: ['application/json']
+        jsonld: ['application/ld+json']
     docs_formats:
+        jsonld: ['application/ld+json']
         json: ['application/json']
         jsonopenapi: ['application/vnd.openapi+json']
         html: ['text/html']
