--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@tanstack/react-query-devtools": "^5.51.5",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "github-markdown-css": "^5.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "spectacle": "^10.1.8"
